welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:6: error: not found: value nbPAs
    recule(nbPAs)
           ^